force-app/main/default/objects/contact_log__c/contact_log__c.object-meta.xml
<CustomObject>
    <label>contact activity log</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>contact log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>contact activity logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>