force-app/main/default/objects/contact_log__c/fields/account_sub_type__c.field-meta.xml
<CustomField>
    <fullName>account_sub_type__c</fullName>
    <formula>text(Contact__r.Account.Sub_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>account sub type</label>
    <type>Text</type>
</CustomField>