force-app/main/default/objects/contact_log__c/fields/action__c.field-meta.xml
<CustomField>
    <fullName>action__c</fullName>
    <label>action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Failed login</fullName>
            </value>
            <value>
                <fullName>Approve invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>