force-app/main/default/objects/contact_log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>contact activity logs</relationshipLabel>
    <relationshipName>contact_logins</relationshipName>
    <type>Lookup</type>
</CustomField>