force-app/main/default/objects/contact_log__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>