force-app/main/default/objects/contact_log__c/fields/extra_info__c.field-meta.xml
<CustomField>
    <fullName>extra_info__c</fullName>
    <label>extra info</label>
    <type>TextArea</type>
</CustomField>