force-app/main/default/objects/contact_log__c/fields/Invoice_Finance_Deal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finance_Deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Finance Deal</label>
    <referenceTo>invoice_finance_deal__c</referenceTo>
    <relationshipLabel>contact activity logs</relationshipLabel>
    <relationshipName>contact_activity_logs</relationshipName>
    <type>Lookup</type>
</CustomField>