force-app/main/default/objects/contact_log__c/fields/notes__c.field-meta.xml
<CustomField>
    <fullName>notes__c</fullName>
    <label>notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>