force-app/main/default/objects/contact_log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>action__c</columns>
    <columns>extra_info__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>