force-app/main/default/objects/contact_log__c/listViews/All_agents_connections.listView-meta.xml
<ListView>
    <fullName>All_agents_connections</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>account_sub_type__c</columns>
    <columns>action__c</columns>
    <columns>Contact__c</columns>
    <columns>date__c</columns>
    <columns>extra_info__c</columns>
    <columns>Invoice_Finance_Deal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>account_sub_type__c</field>
        <operation>equals</operation>
        <value>NA</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All agents connections</label>
</ListView>