force-app/main/default/objects/contact_log__c/listViews/today.listView-meta.xml
<ListView>
    <fullName>today</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>action__c</columns>
    <columns>extra_info__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notContain</operation>
        <value>RELEASE</value>
    </filters>
    <label>today</label>
</ListView>