force-app/main/default/objects/contact_log__c/listViews/yesterday.listView-meta.xml
<ListView>
    <fullName>yesterday</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>action__c</columns>
    <columns>extra_info__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>yesterday</label>
</ListView>